Update Oppg3.java
Litt mer cleanup